v4.14.y/v4.14.11.log
Check from v4.14.11 to v4.14.12
Commit count: 15
checking 8d577afdee3540808302d9dc7a0a7be96c91178f ......
checking 566fb9906ee25a697f4b694dd624398712adf00b ......
	 orig commit -> 05a03bf260e0480bfc0db91b1fdbc2115e3f193b ......
checking 7623bd95a6dccf74e30a21e437f2f789fbbe27f7 ......
	 orig commit -> 13bb1d78f2e372ec0d9b30489ac63768240140fc ......
checking 11118640ae1705c57699a394d0754d4c699772c6 ......
	 orig commit -> 2cb90ed3de1e279dbaf23df141f54eb9fb1861e6 ......
checking 8932255e96ecd172783c2c5a3a414066bda844cf ......
	 orig commit -> c8384bb04261b9d32fe7402a6068ddaf38913b23 ......
checking 56073ba4e7068a737a225631b5b642a2cd105b7a ......
	 orig commit -> de6042d2fa8afe22b76e3c68fd6e9584c9415a3b ......
checking 2d01ac8cc12b973668bf898b03bf9ffb12d83b83 ......
	 orig commit -> 94802151894d482e82c324edf2c658f8e6b96508 ......
checking 88dff1ab04d2792492e3f7e166d039f0dc4e1a09 ......
	 orig commit -> 2fd9c41aea47f4ad071accf94b94f94f2c4d31eb ......
checking 7930cb29fb5feb6d18ffc20a83a1d3e5afac7a8a ......
	 orig commit -> d7732ba55c4b6a2da339bb12589c515830cfac2c ......
checking 89c96233a9ed8ee76d6e8e6a13ea19b92971d33f ......
	 orig commit -> 3ffdeb1a02be3086f1411a15c5b9c481fa28e21f ......
checking a841ba8f4d7e37acc9d46f982f418ee8e876a752 ......
	 orig commit -> a9cdbe72c4e8bf3b38781c317a79326e2e1a230d ......
		 a9cdbe72c4e8bf3b38781c317a79326e2e1a230d has problem. Fixes commit -> ebfc15019cfa72496c674ffcb0b8ef10790dcddc
commit ee06ed9ba5182bfdbc829f150b594c7f14a9d62f
Author: Arnd Bergmann <arnd@arndb.de>
Date:   Fri Feb 2 15:56:17 2018 +0100

    x86/dumpstack: Avoid uninitlized variable
    
    
    [ Upstream commit ebfc15019cfa72496c674ffcb0b8ef10790dcddc ]
    
    In some configurations, 'partial' does not get initialized, as shown by
    this gcc-8 warning:
    
    arch/x86/kernel/dumpstack.c: In function 'show_trace_log_lvl':
    arch/x86/kernel/dumpstack.c:156:4: error: 'partial' may be used uninitialized in this function [-Werror=maybe-uninitialized]
        show_regs_if_on_stack(&stack_info, regs, partial);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    
    This initializes it to false, to get the previous behavior in this case.
    
    Fixes: a9cdbe72c4e8 ("x86/dumpstack: Fix partial register dumps")
    Signed-off-by: Arnd Bergmann <arnd@arndb.de>
    Signed-off-by: Thomas Gleixner <tglx@linutronix.de>
    Cc: Andi Kleen <ak@linux.intel.com>
    Cc: Nicolas Pitre <nico@linaro.org>
    Cc: Peter Zijlstra <peterz@infradead.org>
    Cc: Dave Hansen <dave.hansen@linux.intel.com>
    Cc: Andy Lutomirski <luto@kernel.org>
    Cc: Josh Poimboeuf <jpoimboe@redhat.com>
    Cc: Borislav Petkov <bpetkov@suse.de>
    Cc: Vlastimil Babka <vbabka@suse.cz>
    Link: https://lkml.kernel.org/r/20180202145634.200291-1-arnd@arndb.de
    Signed-off-by: Sasha Levin <alexander.levin@microsoft.com>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>
checking 211ad3fdf63383772d492add846da4b0b2266531 ......
	 orig commit -> 52994c256df36fda9a715697431cba9daecb6b11 ......
checking 151d7039757b71ebd9d170af0944562f51149372 ......
	 orig commit -> 694d99d40972f12e59a3696effee8a376b79d7c8 ......
checking df4373c513b310d75aafeb8902917e7f8d0fe6a5 ......
	 orig commit -> dc32b5c3e6e2ef29cef76d9ce1b92d394446150e ......
checking 611583d327961acad4405063fc7c690ac2cf21c3 ......
	 orig commit -> e816c201aed5232171f8eb80b5d46ae6516683b9 ......
